2007-05-29  Cody Russell  <bratsche@gnome.org>

	* configure.in: Fix a sed script that doesn't correctly detect
	i586-mingw32-gcc-3.4 compiler, and was causing -Wno-pointer-sign
	errors when building with that compiler. (#440896, Yevgen Muntyan)

2007-05-29  Marco Barisione <marco@barisione.org>

	* glib/gregex.c: Fix g_regex_fetch_named() and
	g_regex_fetch_named_pos() when G_REGEX_DUPNAMES is used  (#434358,
	Yevgen Muntyan and #419376, Marco Barisione, patch by Yevgen Muntyan)

2007-05-25  Behdad Esfahbod  <behdad@gnome.org>

	* glib/guniprop.c (g_unichar_iswide), (g_unichar_iswide_cjk):
	Update to Markus Kuhn's updated wcwidth for Unicode 5.0.

2007-05-22  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.2 ===

	* README.in:
	* NEWS: Updates

2007-05-18  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Try again to move the compiler-dependency
	of G_GNUC_INTERNAL to runtime.

2007-05-18  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Don't let PERL_PATH be ''.  (#356769, Joseph Sacco)

2007-05-17  Michael Natterer  <mitch@imendio.com>

	* configure.in: hotfix: revert last change to fix the build on OS X.

2007-05-17  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c (g_option_context_set_translate_func): Fix
	a doc typo.  (#439232, Vincent Untz)

2007-05-17  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Move the compiler-dependency in the G_GNUC_INTERNAL
	definition from configure-time to runtime (of the compiler).
	(#438869, Damien Carbery)

	* glib/gdebug.h:
	* glib/gmessages.h:
	* glib/gunicodeprivate.h:
	* glib/gthreadprivate.h: Move G_GNUC_INTERNAL before function
	declarations to fix compilation with sun studio.  (#438873,
	Damien Carbery)

2007-05-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslice.h:
	* glib/gslice.c:
	* glib/glib.symbols: Make g_slice_debug_tree_statistics() 
	debug-only functionality again.

2007-05-14  Christian Persch  <chpe@gnome.org>
