@@ -1,3 +1,8 @@
+2007-05-30  Dan Winship  <danw@novell.com>
+
+	* glib/glib-sections.txt: 
+	* glib/tmpl/keyfile.sgml: add G_KEY_FILE_DESKTOP_* macros
+
 2007-05-2626  Matthias Clasen  <mclasen@redhat.com>
 
 	* gobject/tmpl/objects.sgml: Fix a typo
